# roget

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  build.rs  dictionary.txt  escore-regress.r  wordle-answers.json  wordle-valids.json
.github/workflows/: coverage.yml  test.yml
corpus/: Cargo.toml  wordle.txt
corpus/src/: main.rs
src/: algorithms.rs  lib.rs  main.rs  solver.rs
src/algorithms/: allocs.rs  automaton.rs  cache.rs  cutoff.rs  enumerate.rs  escore.rs  naive.rs  once_init.rs  popular.rs  precalc.rs  preprune.rs  prune.rs  sigmoid.rs  vecremain.rs  weight.rs
tests/: yukosgiti_wordle_tests.rs
