[package]
name = "roget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
itertools = "0.10"
clap = { version = "3", features = ["derive"] }
once_cell = "1"
wordle-automaton = "^0.9.0"
fst = "0.4.7"
