[package]
name = "roget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
clap = { version = "3", features = ["derive"] }
mimalloc = "0.1.29"
once_cell = "1"
phf = "0.11.1"

[build-dependencies]
phf = "0.11.1"
phf_codegen = "0.11.1"
